feat(*): add ngx-roast-me for feedback

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,3 +43,8 @@
     >
   </div>
 </div>
+
+<ngx-angular-roast
+        mode="remote"
+        reportingUrl="https://roast-report.vercel.app/api/handler">
+</ngx-angular-roast>
