refactor(footer): improve styling refactor(*): improve mobile UX

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,32 +16,28 @@
       <app-playback-container></app-playback-container>
     </nz-card>
   </div>
+</div>
 
-  <div
-    style="
-      display: grid;
-      position: fixed;
-      left: 9px;
-      bottom: 1px;
-      font-weight: bold;
-      grid-template-columns: 1fr auto;
-    "
-  >
+
+<div
+        class="fixed bottom-0 left-0 right-0 w-full flex gap-x-4 px-4 pt-2 border-t border-zinc-700 bg-zinc-900 bg-opacity-90 backdrop-blur-sm"
+>
     <a
-      style=""
-      href="https://discuss.eroscripts.com/t/web-funscript-player-enjoy-funscript-videos-on-ios-android-web/35346"
-      rel="noreferrer"
-      target="_blank"
-      ><p>Discussion Forum</p></a
+            href="https://discuss.eroscripts.com/t/web-funscript-player-enjoy-funscript-videos-on-ios-android-web/35346"
+            rel="noreferrer"
+            target="_blank"
+            class="text-blue-400 hover:text-blue-300 transition-colors"
     >
+        <p class="text-sm md:text-base">Discussion Forum</p>
+    </a>
     <a
-      style="margin-left: 10px"
-      href="https://github.com/martinAlt335/funscript-player"
-      rel="noreferrer"
-      target="_blank"
-      ><p>Github</p></a
+            href="https://github.com/martinAlt335/funscript-player"
+            rel="noreferrer"
+            target="_blank"
+            class="text-blue-400 hover:text-blue-300 transition-colors"
     >
-  </div>
+        <p class="text-sm md:text-base">Github</p>
+    </a>
 </div>
 
 <ngx-angular-roast
