--- a/src/app/component/pure/media-upload/media-upload.component.html
+++ b/src/app/component/pure/media-upload/media-upload.component.html
@@ -1,8 +1,6 @@
 <div class="flex w-full">
-  <h2 class="text-base md:text-lg">Upload Audio or Video</h2>
-  <span class="ml-auto hidden md:inline"
-    >Accepts local audio, video or streaming URL</span
-  >
+    <h2 class="text-base md:text-lg whitespace-nowrap">Upload Audio or Video</h2>
+    <span class="ml-auto hidden md:inline">Accepts local audio, video or streaming URL</span>
 </div>
 
 <div class="flex flex-col gap-4">
