refactor(video-playe): stop auto fullscreen

--- a/src/app/component/pure/video-player/video-player.component.html
+++ b/src/app/component/pure/video-player/video-player.component.html
@@ -1,1 +1,1 @@
-<video #videoPlayer class="h-auto w-full" controls></video>
+<video #videoPlayer class="h-auto w-full" playsinline webkit-playsinline controls></video>
