refactor(banner): force custom font size

--- a/src/app/component/pure/promo-banner/promo-banner.component.html
+++ b/src/app/component/pure/promo-banner/promo-banner.component.html
@@ -20,7 +20,7 @@
           <span class="truncate text-sm md:text-base text-zinc-100">
             <span class="font-medium">FunPlayer</span>
           </span>
-            <span class="block truncate text-xs text-[10px] md:text-xs text-zinc-400">
+            <span class="block truncate text-xs !text-[10px] md:text-xs text-zinc-400">
             Our macOS app. On the Mac App Store.
           </span>
             <span class="sr-only">Our macOS app. On the Mac App Store.</span>
